--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=sql250.main-hosting.eu
 DB_PORT=3306
-DB_DATABASE=test
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u651065033_auth_test
+DB_USERNAME=u651065033_auth_test
+DB_PASSWORD=Temp1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
